# kedro-dataops-template

./: README.md
kedro_dataops_airflow/{{ cookiecutter.repo_name }}/: .dockerignore  pyproject.toml
kedro_mlops_fastapi/{{ cookiecutter.repo_name }}/: pyproject.toml
kedro_mlops_fastapi/{{ cookiecutter.repo_name }}/conf/base/: globals.yml
kedro_mlops_kubeflow/: cookiecutter.json
kedro_mlops_kubeflow/{{ cookiecutter.repo_name }}/: pyproject.toml
kedro_mlops_kubeflow/{{ cookiecutter.repo_name }}/conf/base/: credentials.yml  parameters.yml
kedro_mlops_kubeflow/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/pipelines/_00_gcp_creds_create/: nodes.py  pipeline.py
kedro_mlops_kubeflow/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/pipelines/_00_gcp_creds_delete/: __init__.py  pipeline.py
kedro_mlops_mlflow/{{ cookiecutter.repo_name }}/: .gitignore  Dockerfile  pyproject.toml
kedro_mlops_mlflow/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/: pipeline_registry.py
kedro_mlops_mlflow/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/pipelines/_00_gcp_creds_create/: README.md  __init__.py
kedro_mlops_mlflow/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/pipelines/_00_gcp_creds_delete/: README.md  nodes.py
lineapy_dataops/: lineapy.py
